# FindMe

./: .gitignore  README.md  main.py  pyproject.toml
findme/: __main__.py
findme/enums/: message.py  mode.py
findme/gui/: game.py  randomizer.py  runner.py
findme/settings/: game.py  message_box.py  screen.py
findme/utils/: basedir.py  photoshop.py  resolution.py
